# stm32f429-starter

./: Cargo.toml
.cargo/: config
src/: main.rs
